main title visibility fix

--- a/src/app/main-title/main-title.component.scss
+++ b/src/app/main-title/main-title.component.scss
@@ -22,7 +22,7 @@
   margin-top: 500px;
   position: relative;
   z-index: 2;
-  min-width: 300px;
+  min-width: 325px;
 }
 
 #main-title h1 {
